--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+      rel="stylesheet"
+    />
+    <title>JS Chanllenges</title>
+  </head>
+
+  <body>
+    <header>
+      <h1>JavaScript Challenges;</h1>
+    </header>
+
+    <ul>
+      <li class="item1"><a href="dragAndDrop/dragAndDrop.html"><h4>Drag and Drop Challenge</h4></li>
+      <li class="item2"><a href="#"><h4>Coming soon...</h4></li>
+      <li class="item3"><a href="#"><h4>Coming soon...</h4></li>
+      <li class="item4"><a href="#"><h4>Coming soon...</h4></li>
+      <li class="item5"><a href="#"><h4>Coming soon...</h4></li>
+    </ul>
+
+    <footer>
+      <span>Moi 2020</span>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
